test/corpus/block.txt
================================================================================
Block statements
================================================================================

_block
  _return
_endblock

_block
  >> _unset
_endblock
$

--------------------------------------------------------------------------------

(source_file
  (block
    (return_statement))
  (block
    (return_statement
      (unset))))
