test/corpus/expressions.txt
================================================================================
method calls
================================================================================

object.method
object.method()
object.method<< a
object.method1.method2
_self.new()
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (call
      (identifier)
      (identifier)))
  (fragment
    (call
      (identifier)
      (identifier)
      (parameter_list)))
  (fragment
    (call
      (identifier)
      (identifier)
      (parameter_list
        (parameter
          (identifier)))))
  (fragment
    (call
      (call
        (identifier)
        (identifier))
      (identifier)))
  (fragment
    (call
      (self)
      (identifier)
      (parameter_list))))

================================================================================
logical
================================================================================

_true _and _true
_false _or _true
_true _xor _false
_true _andif _true
_false _orif _true
_false _xorif _true
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (logical_operator
      (true)
      (true)))
  (fragment
    (logical_operator
      (false)
      (true)))
  (fragment
    (logical_operator
      (true)
      (false)))
  (fragment
    (logical_operator
      (true)
      (true)))
  (fragment
    (logical_operator
      (false)
      (true)))
  (fragment
    (logical_operator
      (false)
      (true))))

================================================================================
if_expression
================================================================================

_if _true
_then
  >> _false
_endif 

_if _true
_then
  >> _false
_elif _false
  >> _true
_else
  >> _maybe
_endif

_if _true
_then
  >> _false
_else
  >> _maybe
_endif

_if _true
_then
  >> false
_elif _false
  >> _true
_endif
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (if_expression
      (true)
      (return_statement
        (false))))
  (fragment
    (if_expression
      (true)
      (return_statement
        (false))
      (false)
      (return_statement
        (true))
      (return_statement
        (maybe))))
  (fragment
    (if_expression
      (true)
      (return_statement
        (false))
      (return_statement
        (maybe))))
  (fragment
    (if_expression
      (true)
      (return_statement
        (identifier))
      (false)
      (return_statement
        (true)))))
