test/corpus/literals.txt
================================================================================
strings
================================================================================

"string"
'string'
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (string_literal))
  (fragment
    (string_literal)))

================================================================================
kleenean literals
================================================================================

_true
_false
_maybe
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (true))
  (fragment
    (false))
  (fragment
    (maybe)))

================================================================================
unset literal
================================================================================

_unset
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (unset)))

================================================================================
number literal
================================================================================

0
65535
4294967295
18446744073709551617
$

--------------------------------------------------------------------------------

(source_file
   (fragment
      (number))
    (fragment
      (number))
    (fragment
      (number))
    (fragment
      (number)))
