test/corpus/method_invocation.txt
================================================================================
method calls
================================================================================

object.method
object.method()
object.method<< _unset
object.method1.method2
_self.new()
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)))
  (fragment
    (call
      (variable)
      (identifier)
      (unset)))
  (fragment
    (call
      (call
        (variable)
        (identifier))
      (identifier)))
  (fragment
    (call
      (self)
      (identifier))))
