test/corpus/slot_accessor.txt
================================================================================
slot accessor
================================================================================

.slot
$

.slot<< _unset
$

.slot.invoke()
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (slot_accessor))
  (fragment
    (assignment
      (slot_accessor)
      (unset)))
  (fragment
    (call
      (slot_accessor)
      (identifier))))
