test/corpus/strings.txt
================================================================================
strings
================================================================================

"string"
'string'
"%"
"'"
'"'
"multi
line"

--------------------------------------------------------------------------------

(source_file
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal))
  (fragment
    (string_literal)))
