test/corpus/try.txt
================================================================================
try
================================================================================

_try
_when e
_endtry
$

_try _with cond
_when e
_endtry
$

--------------------------------------------------------------------------------

(source_file
  (fragment
    (try
      (identifier)))
  (fragment
    (try
      (identifier)
      (identifier))))
